fixed: modified UI and fixed text overflow

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -97,7 +97,7 @@
 
 .main__top1-card-body {
     height : 300px;
-    width : 950px;
+
     height: 300px;
     display:flex;
     justify-content:center;
